crates/lang/macro/tests/ui/fail/C-02-constructor-self-val.stderr
error: ink! constructors must have no `self` receiver
  --> $DIR/C-02-constructor-self-val.rs:10:33
   |
10 |         pub fn invalid_self_val(self) -> Self {
   |                                 ^^^^
